--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "react-router-dom": "5.3.0"
+        "react-router-dom": "5.3.0",
+        "sweetalert2": "^11.4.0"
     }
 }
