--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "jquery": "^3.6.0",
+        "react-bootstrap": "^2.1.2",
         "react-router-dom": "5.3.0",
         "sweetalert2": "^11.4.0"
     }
